--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgba(97, 216, 251, 1);;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
